# medication-augmentation

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CLI_COMMANDS.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  LICENSE.txt  README.md  WORKFLOW_EXAMPLE.md  conmeds_augmented.yml  demo_rpmed.json  medication-augmentation-prd.md  pyproject.toml  pytest.ini
data/: conmeds_defaults.yml  extracted_medications.csv  sample_nsclc.csv  specs.csv  timeline_treatments.csv
docs/: BUILDING_DISEASE_MODULES.md  CLI_COMMANDS.md  WORKFLOW_EXAMPLE.md
docs/planning/: FUTURE_ENHANCEMENT_IDEAS.md  IMPLEMENTATION_PLAN.md  PRD.md
src/med_aug/cli/: README.md  app.py
src/med_aug/config/: README.md
src/med_aug/core/: README.md  __init__.py  analyzer.py  extractor.py  logging.py  mixins.py
src/med_aug/diseases/: README.md  __init__.py  base.py
src/med_aug/evaluation/: README.md  __init__.py  evaluator.py  ground_truth.py  llm_evaluator.py  metrics.py
src/med_aug/infrastructure/: README.md  __init__.py  rate_limiter.py
src/med_aug/llm/: README.md  __init__.py  classifier.py  prompts.py  providers.py  service.py
src/med_aug/output/: README.md  __init__.py  exporters.py  metrics.py  reports.py  visualizations.py
src/med_aug/pipeline/: README.md  __init__.py  checkpoint.py  evaluation_phase.py  orchestrator.py  phases.py  progress.py
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/unit/cli/: test_app.py
tests/unit/core/: test_analyzer.py  test_extractor.py  test_models.py
tests/unit/diseases/: test_base.py  test_nsclc.py  (+1 more)
(+30 files in other folders)
